--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <script type="text/javascript" charset="utf-8" src="/dist/clappr.min.js"></script>
-  <script type="text/javascript" charset="utf-8" src="/dist/clappr_playback_name_plugin.js"></script>
+  <script type="text/javascript" charset="utf-8" src="dist/clappr.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="dist/clappr_playback_name_plugin.js"></script>
   <title>clappr-playback-name-plugin Test Page</title>
   <script type="text/javascript" charset="utf-8">
 window.onload = function() {
   var player = new Clappr.Player({
     sources: ['http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4'],
-    
     plugins: {
       container: [ClapprPlaybackNamePlugin]
-    }
-    
+    },
+    width: 640, height: 360,
   });
   player.attachTo(document.getElementById('player-wrapper'));
 }
   </script>
 </head>
 <body>
-  <div id="player-wrapper">
+  <div align="center">
+    <div id="player-wrapper">
+  </div>
   </div>
 </body>
 </html>
